upd: fix.alignment

--- a/src/app/shared/modules/header/header.component.scss
+++ b/src/app/shared/modules/header/header.component.scss
@@ -37,6 +37,7 @@
 
 .manager {
 	cursor: pointer;
+	align-items: center;
 	* {
 		-webkit-user-select: none;
 		-moz-user-select: none;
